--- a/console/extension/manifest.json
+++ b/console/extension/manifest.json
@@ -2,14 +2,14 @@
 	"manifest_version": 2
 	
 	,"version": "0.0"
-	,"name": "Extension with editor template"
-	,"description": "Extension template with script editor and launcher"
+	,"name": "Extension template"
+	,"description": "Extension template with basic functionality"
 	,"icons": {
 		"48": "icons/icon-48.png"
 	}
 	
 	,"browser_action": {
-		"default_title": "Script editor"
+		"default_title": "Template"
 		,"default_icon": {
 			"16": "icons/icon16.png"
 			,"32": "icons/icon32.png"
@@ -17,10 +17,10 @@
 	}
 	
 	,"commands": {
-		"0": {
-			"description": "koMaHga HoJLb"
+		"content": {
+			"description": "Execute content script"
 			,"suggested_key": {
-				"default": "Ctrl+Shift+0"
+				"default": "Ctrl+Shift+1"
 			}
 		}
 	}	
